--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
   ],
   "website": "https://www.twilio.com/docs/howto/walkthrough/automated-survey/node/express",
   "repository": "https://github.com/TwilioDevEd/survey-node",
-  "logo": "https://s3.amazonaws.com/deved/twilio-logo.png",
+  "logo": "https://s3.amazonaws.com/howtodocs/twilio-logo.png",
   "success_url": "/",
   "addons": [
     "mongolab"
