--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "body-parser": "^1.11.0",
     "express": "^4.11.2",
     "jade": "^1.9.2",
-    "mongoose": "^3.8.23",
+    "mongoose": "4.4.8",
     "morgan": "^1.5.1",
     "twilio": "^1.10.0"
   }
