--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "an automated survey conducted via voice and sms",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,8 +26,8 @@
     "body-parser": "^1.11.0",
     "express": "^4.11.2",
     "jade": "^1.9.2",
-    "mongoose": "4.4.8",
+    "mongoose": "4.6.6",
     "morgan": "^1.5.1",
-    "twilio": "^1.10.0"
+    "twilio": "^3.0.0-rc.13"
   }
 }
