--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
   },
   "homepage": "https://github.com/TwilioDevEd/survey-node",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.11.0",
     "express": "^4.11.2",
     "jade": "^1.9.2",
     "mongoose": "4.6.6",
     "morgan": "^1.5.1",
-    "twilio": "^3.0.0-rc.13"
+    "twilio": "3.0.0-rc.13"
+  },
+  "devDependencies": {
+    "bluebird": "^3.4.6",
+    "chai": "^3.5.0",
+    "lodash": "^4.16.6",
+    "mocha": "^3.1.2",
+    "supertest-promised": "^1.0.0",
+    "xml-parser": "^1.2.1"
   }
 }
