--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "an automated survey conducted via voice and sms",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
