--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^3.5.0",
     "lodash": "^4.16.6",
     "mocha": "^3.1.2",
+    "supertest": "^2.0.1",
     "supertest-promised": "^1.0.0",
     "xml-parser": "^1.2.1"
   }
