Fixes, linting removal of account sid and readme updates

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-export MONGO_URL=mongodb uri
+# example connection string
+# export MONGODB_URL=mongodb://localhost/test
+
+export MONGO_URL=mongodb url
