--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha ./**/*.spec.js --exit"
   },
   "repository": {
     "type": "git",
