--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "mongoose": "5.6.11",
